k8s-apps-deployment/k8s-spec-vote/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  #namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: docker.io/hutinskit/vote
        name: vote
        ports:
        - containerPort: 80
          name: vote
