k8s-apps-deployment/k8s-spec-vote/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-test-ingress
  namespace: vote
  labels:
    app: vote
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "tino-vote-test.tinotest.com"  
    http:
      paths:
      - pathType: Prefix
        path: /      
        backend:
          service: 
            name: vote
            port:
              number: 80
